--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.springframework</groupId>
-    <artifactId>mqtt-spring-boot</artifactId>
+    <groupId>it.ts.dotcom.malvestio</groupId>
+    <artifactId>mqtt.console</artifactId>
     <version>0.1.0</version>
     <!--<packaging>jar</packaging>-->
     <packaging>war</packaging>
-    <name>mqtt-spring-boot</name>
+    <name>mqtt-console</name>
     
     <properties>
         <org.springframework.boot-version>1.5.3.RELEASE</org.springframework.boot-version>
@@ -17,12 +17,18 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-
+    
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.3.RELEASE</version>
     </parent>
+    
+    <!--    <parent>
+        <groupId>it.ts.dotcom.framework</groupId>
+        <artifactId>parent</artifactId>
+        <version>0.1.0</version>
+    </parent>-->
 
     <dependencies>
         <dependency>
@@ -162,4 +168,152 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>default</id>
+            
+            <activation>
+                <property>
+                    <name>!env</name>
+                </property>
+            </activation>   
+            
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.7</version>
+                        <executions>
+                            <execution>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <delete file="${project.build.outputDirectory}/database.properties.dev" />
+                                        <delete file="${project.build.outputDirectory}/database.properties.test" />
+                                        <delete file="${project.build.outputDirectory}/database.properties.prod" />
+                                        <copy file="src/main/resources/database.properties.dev" tofile="${project.build.outputDirectory}/database.properties" />
+                                        <delete file="${project.build.outputDirectory}/application.properties.dev" />
+                                        <delete file="${project.build.outputDirectory}/application.properties.test" />
+                                        <delete file="${project.build.outputDirectory}/application.properties.prod" />
+                                        <copy file="src/main/resources/application.properties.dev" tofile="${project.build.outputDirectory}/application.properties" />
+                                        <delete file="${project.build.outputDirectory}/log4j.properties.dev" />
+                                        <delete file="${project.build.outputDirectory}/log4j.properties.test" />
+                                        <delete file="${project.build.outputDirectory}/log4j.properties.prod" />
+                                        <copy file="src/main/resources/log4j.properties.dev" tofile="${project.build.outputDirectory}/log4j.properties" />
+                                        <delete file="${project.build.outputDirectory}/mqtt.properties.dev" />
+                                        <delete file="${project.build.outputDirectory}/mqtt.properties.test" />
+                                        <delete file="${project.build.outputDirectory}/mqtt.properties.prod" />
+                                        <copy file="src/main/resources/mqtt.properties.dev" tofile="${project.build.outputDirectory}/mqtt.properties" />
+                                    </tasks>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>  
+        <profile>
+            <id>dev</id>
+            
+            <activation>
+                <property>
+                    <name>env</name>
+                    <value>dev</value>
+                </property>
+            </activation>   
+                    
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.7</version>
+                        <executions>
+                            <execution>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <delete file="${project.build.outputDirectory}/database.properties.dev" />
+                                        <delete file="${project.build.outputDirectory}/database.properties.test" />
+                                        <delete file="${project.build.outputDirectory}/database.properties.prod" />
+                                        <copy file="src/main/resources/database.properties.dev" tofile="${project.build.outputDirectory}/database.properties" />
+                                        <delete file="${project.build.outputDirectory}/application.properties.dev" />
+                                        <delete file="${project.build.outputDirectory}/application.properties.test" />
+                                        <delete file="${project.build.outputDirectory}/application.properties.prod" />
+                                        <copy file="src/main/resources/application.properties.dev" tofile="${project.build.outputDirectory}/application.properties" />
+                                        <delete file="${project.build.outputDirectory}/log4j.properties.dev" />
+                                        <delete file="${project.build.outputDirectory}/log4j.properties.test" />
+                                        <delete file="${project.build.outputDirectory}/log4j.properties.prod" />
+                                        <copy file="src/main/resources/log4j.properties.dev" tofile="${project.build.outputDirectory}/log4j.properties" />
+                                        <delete file="${project.build.outputDirectory}/mqtt.properties.dev" />
+                                        <delete file="${project.build.outputDirectory}/mqtt.properties.test" />
+                                        <delete file="${project.build.outputDirectory}/mqtt.properties.prod" />
+                                        <copy file="src/main/resources/mqtt.properties.dev" tofile="${project.build.outputDirectory}/mqtt.properties" />
+                                    </tasks>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+            
+        <profile>
+            <id>test</id>
+            
+            <activation>
+                <property>
+                    <name>env</name>
+                    <value>test</value>
+                </property>
+            </activation>
+                        
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.7</version>
+                        <executions>
+                            <execution>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <delete file="${project.build.outputDirectory}/database.properties.dev" />
+                                        <delete file="${project.build.outputDirectory}/database.properties.test" />
+                                        <delete file="${project.build.outputDirectory}/database.properties.prod" />
+                                        <copy file="src/main/resources/database.properties.test" tofile="${project.build.outputDirectory}/database.properties" />
+                                        <delete file="${project.build.outputDirectory}/application.properties.dev" />
+                                        <delete file="${project.build.outputDirectory}/application.properties.test" />
+                                        <delete file="${project.build.outputDirectory}/application.properties.prod" />
+                                        <copy file="src/main/resources/application.properties.test" tofile="${project.build.outputDirectory}/application.properties" />
+                                        <delete file="${project.build.outputDirectory}/log4j.properties.dev" />
+                                        <delete file="${project.build.outputDirectory}/log4j.properties.test" />
+                                        <delete file="${project.build.outputDirectory}/log4j.properties.prod" />
+                                        <copy file="src/main/resources/log4j.properties.test" tofile="${project.build.outputDirectory}/log4j.properties" />
+                                        <delete file="${project.build.outputDirectory}/mqtt.properties.dev" />
+                                        <delete file="${project.build.outputDirectory}/mqtt.properties.test" />
+                                        <delete file="${project.build.outputDirectory}/mqtt.properties.prod" />
+                                        <copy file="src/main/resources/mqtt.properties.test" tofile="${project.build.outputDirectory}/mqtt.properties" />
+                                    </tasks>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile> 
+            
+    </profiles>
 </project>
